解决了之前的一些问题，编写了用户的获取信息还有上下传头像的问题

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,7 +3,7 @@ mysql:
   port: 33067
   username: root
   password: root
-  database: NewSystem
+  database: android_ios
   charset: utf8mb4
   parseTime: true
 redis:
