用户的基本信息已经结束，后期可以能会有一些其他的修改，接下来就是商品的一些信息

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 MY_SECRET_KEY=wangBochenAndLaiChEnYu
+SMTP_SERVER=smtp.163.com
+SMTP_PORT=25
+SENDER_EMAIL=15294440097@163.com
+SENDER_PASSWORD=TDCKQQMYYUNADUOD
