注册登录结合启动页面

--- a/app_login/build.gradle
+++ b/app_login/build.gradle
@@ -13,8 +13,8 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
     }
 
     buildTypes {
@@ -25,7 +25,9 @@ android {
     }
 }
 dependencies {
+
     implementation(project(":core_net_work"))
+    implementation(project(':common_utls'))
 }
 
 
