--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,11 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [AROUTER_MODULE_NAME: project.getName()]
+            }
+        }
     }
 
     buildTypes {
@@ -29,8 +34,15 @@ android {
 }
 
 dependencies {
+    //ARouter
+    implementation 'com.alibaba:arouter-api:1.5.2'
+    annotationProcessor 'com.alibaba:arouter-compiler:1.5.2'
+    //mmkv
+    implementation 'com.tencent:mmkv:1.3.2'
+
     //项目模块的依赖
     implementation(project(":app_mine"))
+    implementation(project(":app_login"))
     implementation(project(":app_sell_pager"))
     implementation(project(":common_utls"))
     implementation(project(":core_net_work"))
