--- a/config.gradle
+++ b/config.gradle
@@ -6,6 +6,16 @@ if (isRunAlone.toBoolean()) {
     apply plugin: 'com.android.library'
 }
 dependencies {
+    //kotlin标准库
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0"
+
+    //ARouter
+    implementation 'com.alibaba:arouter-api:1.5.2'
+    annotationProcessor 'com.alibaba:arouter-compiler:1.5.2'
+    //mmkv
+    implementation 'com.tencent:mmkv:1.3.2'
+
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -25,6 +35,11 @@ android {
         targetCompatibility JavaVersion.VERSION_17
     }
     defaultConfig {
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [AROUTER_MODULE_NAME: project.getName()]
+            }
+        }
         sourceSets {
             main {
                 // 单独调试与集成调试时使用不同的 AndroidManifest.xml 文件
