--- a/core_net_work/build.gradle
+++ b/core_net_work/build.gradle
@@ -25,7 +25,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
+    viewBinding {
+        enable = true
+    }
 }
 dependencies {
     implementation(project(":common_utls"))
