--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,8 @@ dependencyResolutionManagement {
     repositories {
         mavenCentral()
         jcenter()
+        maven { url "https://s01.oss.sonatype.org/content/groups/public" }
+
         maven { url "https://jitpack.io" }
         google()
     }
