--- a/config/config.yaml
+++ b/config/config.yaml
@@ -16,4 +16,4 @@ redis:
 #  AccessKeyId: "LTAI5tG17fnfGpThU8nMMjyJ"
 #  AccessKeySecret: "LruAAgiljPvOrxDaEh2ZYXACugxC2h"
 #  Bucket: "xichen-server"
-server: "8.130.86.26"
+server: www.xichen.love
